# rrl-period-tuner

./: .gitignore  README.md  experiment.py  format_dates.py  observations_optimizer.py  observations_planner.py  optimizer.py  period_plotter.py  phase_finder.py  plot_constraints.py  plot_stars.py  pyproject.toml  table_a.csv
benchmark/: csv_to_lcv.py  plot_stars_idl.py
benchmark/period/: experiment.py  functions.py  prueba_lombscargle.py
data/: final_4.csv  output.csv  output_1.csv  periods.csv  ra_dec.csv  star_lookup.csv  table_a.csv
data/5000rrlyrae/: EPOCH_PHOTOMETRY-Gaia DR3 2305880053307403008.csv  EPOCH_PHOTOMETRY-Gaia DR3 2306100539748390400.csv  EPOCH_PHOTOMETRY-Gaia DR3 2306761621114628224.csv  EPOCH_PHOTOMETRY-Gaia DR3 2307419610104297984.csv  EPOCH_PHOTOMETRY-Gaia DR3 2307492933786059520.csv  EPOCH_PHOTOMETRY-Gaia DR3 2307681495735585920.csv  EPOCH_PHOTOMETRY-Gaia DR3 2307803889418658048.csv  EPOCH_PHOTOMETRY-Gaia DR3 2308043376794953344.csv  EPOCH_PHOTOMETRY-Gaia DR3 2308106461274195712.csv  EPOCH_PHOTOMETRY-Gaia DR3 2308606253733676288.csv  EPOCH_PHOTOMETRY-Gaia DR3 2308635051489333888.csv  EPOCH_PHOTOMETRY-Gaia DR3 2308860623171818240.csv  EPOCH_PHOTOMETRY-Gaia DR3 2308930231706739200.csv  EPOCH_PHOTOMETRY-Gaia DR3 2308982699026678784.csv  EPOCH_PHOTOMETRY-Gaia DR3 2309057676271330944.csv  EPOCH_PHOTOMETRY-Gaia DR3 2309075435961072896.csv  EPOCH_PHOTOMETRY-Gaia DR3 2309225008197193856.csv  EPOCH_PHOTOMETRY-Gaia DR3 2309420029777356160.csv  (+4982 more)
data/periods/: RRGem.npy  (+7 more)
utils/: data_utils.py  observation_utils.py  period_utils.py  run_utils.py
(+139 files in other folders)
