[tool.poetry]
name = "tfm"
version = "0.1.0"
description = ""
authors = ["markuschue <markuschue@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.1"
pandas = "^2.2.2"
astropy = "^6.1.2"
astroquery = "^0.4.7"
astroplan = "^0.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
